mobile.css
@import url(http://fonts.googleapis.com/css?family=Neuton:400,700);

html, body, div, p, img {
  margin:0px;
  padding:0px;
}

html {
  height:100%;
  width: 100%;
}

body {
  background-color: #FFFFFF;
  font-family:'Neuton', serif;
  height:100%;
  width: 100%;
}

#top {
  background-color:#225b66;
  height: 10px;
}

#title {
  background-color:#FFFFFF;
}

#name {
  margin-top: 10px;
  width: 90%;
  margin-left: 5%;
  font-size: 45px;
}

#bgmiddle {
  background-color: rgba(23,163,165, 0.55);
}

.bio{
  width: 100%;
}

#left {
  height: 210px;
  text-align: center;
}

#me {
  height: 200px;
  width: auto;
  margin: auto;
  position: relative;
  top: 15px;
}

#right{
  width: 90%;
  position: relative;
  left: 5%;
  font-size: 18px;
  padding-bottom: 15px;
}

#bottom{
  padding-top: 15px;
  background-color: #e85248;
  color: #FFFFFF;
  font-size: 16px;
}

#facebook img, #twitter img, #linkedin img, #email img {
  width: 50px;
  height: 50px;
  display: inline-block;
  margin-left: 15px;
}

#email img {
  width: 45px;
  height: 45px;
  padding-left: 2px;
}

.bottomText {
  height: 50px;
  margin-top: -10px;
  display: inline-block;
  padding-left: 10px;
  line-height: 1.1em;
  vertical-align: middle;
}

a:link, a:visited, a:active {
  color: #FFFFFF;
  text-decoration:none;
}

a:hover {
  color: #FFFFFF;
  text-decoration:underline;
}

